--- a/hugo/content/post/20191110.md
+++ b/hugo/content/post/20191110.md
@@ -2,6 +2,7 @@
 title: "Docker＋Node.js＋VSCode環境をWindowsで構築する"
 date: 2019-11-07T13:38:57+09:00
 draft: false
+tags: ["Docker", "Node.js"]
 ---
 
 手順メモ。
