--- a/hugo/content/post/20200420.md
+++ b/hugo/content/post/20200420.md
@@ -1,7 +1,8 @@
 ---
-title: "Next.js + React + Typescirpt に Jest 導入したメモ"
+title: "Next.js + React + TypeScirpt に Jest 導入したメモ"
 date: 2020-04-20T19:52:53+09:00
-draft: true
+draft: false
+tags: ["Next.js", "React", "TypeScript", "Jest"]
 ---
 
 # 入れたものリスト
@@ -53,9 +54,9 @@ yarn add -D @testing-library/react
 ### Container Componentをレンダリングしたい場合
 react-testing-libraryにはshallowレンダリング機能がないため、子や孫にContainer Componentが含まれていたら詰む。
 
-なので対策として、コンポーネントを`<Provider>`でラップしてからレンダリングするラッパーレンダラーを用意する。
+対策として、コンポーネントを`<Provider>`でラップしてからレンダリングするラッパーレンダラーを用意し、がっつりレンダリングしてしまう。
 
-ラッパーレンダラーをプロジェクトのルートとかに書く。
+ラッパーレンダラー`testUtils.js`をプロジェクトのルートとかに書く。
 ```testUtils.js
 import React from 'react'
 import { createStore } from 'redux';
@@ -102,7 +103,7 @@ import "@testing-library/jest-dom/extend-expect";
 ```jest.config.js
 module.exports = {
 
-  setupFilesAfterEnv: ["<rootDir>/setupTests.js]
+  setupFilesAfterEnv: ["<rootDir>/setupTests.js"]
 
 }
 ```
@@ -113,14 +114,14 @@ module.exports = {
 react-testing-libraryとjest-domを同時に利用するときの、[waitFor()使えない問題](https://github.com/testing-library/dom-testing-library/issues/477)を解消する
 
 パッケージインストール
-```
+```bash
 yarn add -D jest-environment-jsdom-sixteen
 ```
 
 jest呼び出し時のコマンドライン引数を追加する必要があるため、`package.json`のスクリプトを変更
 ```package.json
 "scripts": {
-  "test": "jest --env=jest-environment-jsdom-sixteen
+  "test": "jest --env=jest-environment-jsdom-sixteen"
 }
 ```
 
