add: new blog pages

--- a/hugo/content/post/20200421.md
+++ b/hugo/content/post/20200421.md
@@ -1,10 +1,16 @@
 ---
-title: "20200421"
+title: "git log の分析考える"
 date: 2020-04-21T00:50:55+09:00
-draft: true
+draft: false
+tags: ["Git"]
 ---
 
+（追記予定）
+
+# よく更新されるファイルを探したい
+
 ブランチ`v1`〜`v2`間の各ファイルの追加・削除行数の合計を表示し、追加行数降順に並べる
+
 ```bash
 git log --numstat --no-merges --pretty="" v1 v2 | grep -v "dist/" | grep -E ".+\.(ts|tsx)" | sort -nr
 ```
