--- a/hugo/content/post/20191022.md
+++ b/hugo/content/post/20191022.md
@@ -1,8 +1,8 @@
 ---
-title: "MacのTerminalがzshになったのでPreztoでプロンプトテーマ設定した"
+title: "zshにPreztoでプロンプトテーマ設定した話"
 date: 2019-10-22T16:02:52+09:00
 draft: false
-tags: ["Mac"]
+tags: ["Prezto"]
 ---
 
 # zsh到来
